src/app/widget/widget.component.scss
/* ... */
/*/--------------------/*/
/*/Style for chat area/*/
/*/------------------/*/

.widget-composer {
  display: flex;
  position: absolute;
  bottom: 10px;
  width: 100%;
  left: 5px;
  z-index: 1;

  &.main-composer-area {
    position: fixed;
    width: calc(100% - 20px);
  }
  
  .emoji-btn {
    position: absolute;
    bottom: 10px;
    left: 5px;
    font-size: 20px;
    cursor: pointer;
    z-index: 999999;
  }

  .widget-chat-composer {
    display: block;
    border-radius: 10px;
    border: none;
    height: 40px;
    padding: 0 38px;
    outline: none;
    width: 100%;
    font-size: 13px !important;
    background: #eff2f7;
    color: #3e3e3e;
    margin: 0;
    align-content: center;
  }

  .send-btn {
    position: absolute;
    right: 12px;
    bottom: 10px;
    cursor: pointer;
    font-size: 20px;
  }
}

.error-icon {
  text-align: center;
  display: grid;
  font-size: 20px;
  font-weight: 600;
  font-family: "Roboto";
  position: inherit;
  opacity: 0.75;
  color: var(--main-color);
  top: 20%;

  .error-emoji {
    font-size: 100px;
    font-weight: 600;
  }
}

.error-message {
  position: inherit;
  font-family: "Roboto";
  font-size: 13px;
  font-weight: normal;
  // line-height: 16px;
  font-style: normal;
  text-align: center;
  color: var(--main-color);
  top: 15%;
  padding: 30px;
}

.error-message h4 {
  font-weight: 500;
}

.widget-error-button {
  position: inherit;
  bottom: 5px;
  width: 100%;
  left: 0px;

  .widget-error-trigger {
    font-family: "Roboto";
    font-style: normal;
    text-align: center !important;
    width: 100%;
    font-size: 14px;
    font-weight: 500;
    height: 45px;
    line-height: 34px;
    border: 0;
    border-radius: 7px;
    display: block;
    margin: 0 auto;
    cursor: pointer;
    max-width: 300px;
    appearance: none;
    -webkit-appearance: none;
    -moz-appearance: none;
    background: #eff2f7;
    color: var(--main-color);
  }

  .call-btn {
    margin: 0 auto 10px !important;
  }
}

mat-spinner {
  width: 80px;
  height: 80px;
  position: absolute;
  z-index: 9999999;
  top: 45%;
  left: 45%;
  transform: translate(-25%, -25%);
  display: block;
}

//Composer Preview File
.file-preview-cover {
  display: inline-block;
  position: absolute;
  background: #f1f1f1;
  bottom: 50px;
  left: 35px;

  mat-icon {
    // position: absolute;
    // right: 0;
    // background: rgba(255, 255, 255, 0.4);
    // border-radius: 100%;
    // font-size: 14px;
    // text-align: center;
    // vertical-align: middle;
    // line-height: 24px;
    // color: #000;
    cursor: pointer;

    &:hover {
      background: rgba(0, 0, 0, 0.3);
    }
  }
}

.preview-file {
  position: relative;
  display: inline-block;
  margin-right: 10px;
  text-align: center;
  overflow: hidden;

  img {
    max-width: 250px;
    min-height: 150px;
    width: 100%;
    height: 100%;
    min-width: 100px;
  }

  span {
    display: block;
    font-size: 12px;
    font-weight: 500;
    margin: 5px auto;
    text-align: center;
    color: $white-color;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: pre;
    position: absolute;
    bottom: -3px;
    width: 100%;
    padding: 5px;
    transform: translate(0, 100px);
    transition: all 0.3s;

    &.file-type {
      bottom: 50px;
      right: 0px;
      background: #f15642;
      border-radius: 4px;
      max-width: 80px;
      font-size: 14px;
      text-transform: uppercase;
      padding: 2px 5px;
      transform: translate(0);
    }
  }

  &:hover {
    span {
      background: rgba(0, 0, 0, 0.3);
      transform: translate(0);
      transition: all 0.3s;
    }
  }
}

.file-message {
  position: relative;

  .file-type-message {
    max-width: 55px;
    min-width: 50px;
  }

  .file-name {
    white-space: pre;
    max-width: 200px;
    overflow: hidden;
    text-overflow: ellipsis;
    display: grid;
  }

  .file-ext-main {
    position: absolute;
    bottom: 20px;
    left: 20px;
    text-transform: uppercase;
    background: #f15642;
    padding: 0px 5px;
    font-size: 13px;
    color: rgb(255, 255, 255);
    font-weight: 600;
    min-width: 45px;
    height: 20px;
    text-align: center;
    border-radius: 4px;
  }
}

.audioPlayer {
  width: 240px;
}

.videoPlayer {
  width: 250px;
  height: 150px;
}

.message-image {
  max-width: 240px;
  min-width: 85px;
  width: 100%;
  height: auto;
}

.file-btn {
  position: absolute;
  right: 30px;
  bottom: 10px;
  cursor: pointer;
  font-size: 20px;
  transform: rotate(39deg);
  background: transparent;
  border: none;
  outline: none;
}

#file-btn>label {
  margin-bottom: 0 !important;
}

#file-btn>input {
  display: none;
}

// Button Messages
.structured-message-area.custom-theme mat-chip.mat-chip {
  color: #fff;
  background: var(--main-color);
  border: 1px solid #bfcadb;
  border-radius: 3px;
  width: 100%;
  text-align: center;
  justify-content: center;
  margin: 4px 4px 0px 4px !important;
  line-height: 13px;
  text-shadow: 0 0 2px black;
  height: auto;

  &:hover {
    background: var(--main-color);
    color: $white-color;
  }
  &:disabled {
    cursor: default;
  }
}

.structured-message-area {
  width: 100%;
  margin: 5px 0px 15px 0px;

  mat-chip {
    background: transparent;
    font-size: 12px;
    font-weight: normal;
    cursor: pointer;
    margin: 2px;
  }
}

.structured-btn-heading {
  font-size: 14px;
  font-weight: bold;
  display: block;
  line-height: 15px;
  text-align: left;
  width: auto;
  max-width: 190px;
}

.structure-message-chips {
  position: relative;
  top: 10px;
}
/* ... */

